--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "product-app",
   "version": "0.0.0",
   "scripts": {
+    "server": "json-server server/db.json",
+    "server:all": "concurrently \"npm run server\" \"ng serve\"",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -12,13 +14,29 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.3",
+    "@angular/cdk": "^10.0.1",
     "@angular/common": "~10.0.3",
     "@angular/compiler": "~10.0.3",
     "@angular/core": "~10.0.3",
     "@angular/forms": "~10.0.3",
+    "@angular/material": "^10.0.1",
     "@angular/platform-browser": "~10.0.3",
     "@angular/platform-browser-dynamic": "~10.0.3",
     "@angular/router": "~10.0.3",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.5.0",
+    "concurrently": "^5.2.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "json-server": "^0.16.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.23",
+    "multer": "^1.4.2",
+    "ngx-bootstrap": "^5.6.1",
+    "path": "^0.12.7",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
