--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "concurrently": "^5.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jquery": "^3.5.1",
     "json-server": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.23",
